avoid page break inside

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a {
 }
 
 .cv {
-    width: 820px!important;
+    width: 820px !important;
 }
 
 .cv-header {
@@ -30,12 +30,12 @@ a {
     font-size: 14px;
 }
 
-.cat-title {
+.cv-cat-title {
     display: flex;
     align-items: center;
 }
 
-.cat-icon {
+.cv-cat-icon {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -45,4 +45,19 @@ a {
     justify-content: center;
     align-items: center;
     font-size: 1.5rem;
+}
+
+.pb-inside-avoid {
+    page-break-inside: avoid;
+}
+
+@media print {
+    @page {
+        size: A4;
+        margin: 3rem 0 3rem 0;
+    }
+
+    @page :first {
+        margin-top: 0;
+    }
 }
